# cs2-analytics

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  STATUS.md  cs2_player_segmentation.pt  main.py  pyproject.toml
analysis/: death_zones.py  entry_kills.py  reaction_time.py  reaction_time_advanced.py  round_analyzer.py
dataset/: tick_dataset.py
docs/superpowers/plans/: 2026-05-06-foundation.md  2026-05-15-phase2-storage.md
docs/superpowers/specs/: 2026-05-06-foundation-design.md  2026-05-15-phase2-storage-design.md
parser/: parse_demo.py
src/cs2_analytics/: cli.py
src/cs2_analytics/analysis/: death_zones.py  entry_kills.py  reaction_time.py  reaction_time_advanced.py  round_analyzer.py
src/cs2_analytics/data/: repository.py
src/cs2_analytics/parser/: parse_demo.py  tick_dataset.py
src/cs2_analytics/vision/: build_dataset.py
src/cs2_analytics/visualization/: heatmap.py
tests/: test_cli.py  test_repository.py  test_smoke.py
utils/: map_zones_awpy.py
vision/: build_dataset.py  dataset.yaml  frame_extractor.py
visualization/: heatmap.py
