[project]
name = "cs2-analytics"
version = "0.1.0"
description = "CS2 demo analytics and computer vision pipeline"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Patrick Thiais", email = "patrickthiais@gmail.com" },
]
dependencies = [
    "awpy>=2.0.2",
    "demoparser2>=0.41.1",
    "pandas",
    "polars",
    "pyarrow",
    "matplotlib",
    "seaborn",
    "scipy",
    "numpy",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "ultralytics>=8.4.22",
    "opencv-python",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
cs2-analytics = "cs2_analytics.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cs2_analytics"]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
